fixed small typo

--- a/hs_core/templates/pages/metadata_terms.html
+++ b/hs_core/templates/pages/metadata_terms.html
@@ -1106,7 +1106,7 @@
             <li><strong>Term: </strong>scriptDependencies</li>
             <li><strong>URI: </strong><a href="#ToolVersion">http://www.hydroshare.org/terms/scriptDependencies</a></li>
             <li><strong>Label: </strong>Script Dependencies</li>
-            <li><strong>Description: </strong>The libaries/modules that the script depends on to execute.</li>
+            <li><strong>Description: </strong>The libraries/modules that the script depends on to execute.</li>
         </ul>
     <a name="scriptReleaseDate"></a>
         <ul >
