--- a/hs_collection_resource/templates/pages/collectionresource.html
+++ b/hs_collection_resource/templates/pages/collectionresource.html
@@ -103,7 +103,7 @@
             <div id="view_deleted_res_div">
                 <input type="button" id="view_deleted_res_btn" style="color: red" value="View deleted contents" onclick=" $('#deleted-resources-modal').modal('show');">
                 <span data-toggle="tooltip" data-placement="auto"
-                      title='{% if edit_mode %}Some resources in this collection have been deleted which results in broken resource links in this collection. You need to remove deleted resources from the collection to fix that.{% endif %}'
+                      title='Some resources in this collection have been deleted which may result in broken resource links in the bag. {% if edit_mode %} You need to remove deleted resources from the collection to fix that.{% endif %}'
                       class="glyphicon glyphicon-info-sign text-muted"></span>
             </div>
         {% endif %}
