--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -6,7 +6,7 @@
         <div class="container">
             <div class="col-sm-12">
                 <div class="collaborate-nav">
-                    <a href="#" class="glyphicon glyphicon-bell collaborate-nav-item"></a>
+                    <a href="#my-groups/" class="glyphicon glyphicon-bell collaborate-nav-item"></a>
                     <a href="#" class="collaborate-nav-item active">My Groups</a>
                     <a href="#" class="collaborate-nav-item">Find Groups</a>
                 </div>
@@ -36,7 +36,7 @@
                        data-toggle="tab"><i class="glyphicon glyphicon-list-alt"></i> OVERVIEW</a></li>
                 <li role="presentation">
                     <a href="#members" aria-controls="members" role="tab" data-toggle="tab">
-                        <i class="glyphicon glyphicon-file"></i> MEMBERS</a>
+                        <i class="glyphicon glyphicon-user"></i> MEMBERS</a>
                 </li>
             </ul>
 
@@ -48,7 +48,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <h3 class="panel-title">
-                                        <span class="glyphicon glyphicon-user">&nbsp;</span>About this group
+                                        <span class="glyphicon glyphicon-question-sign">&nbsp;</span>About this group
                                     </h3>
                                 </div>
 
@@ -142,10 +142,8 @@
 
                                 <div class="group-activity-comment">
                                     <fieldset>
-                                        <label>Comment</label>
-                                                <textarea class="form-control"
-                                                          name="details" rows="4">{% if profile.details %}
-                                                    {{ profile.details }}{% endif %}</textarea>
+                                        <label>Write a comment</label>
+                                                <textarea class="form-control"></textarea>
                                     </fieldset>
                                     <a class="btn btn-primary">Post</a>
                                 </div>
@@ -179,20 +177,141 @@
 
                                 <div class="group-activity-comment">
                                     <fieldset>
-                                        <label>Comment</label>
-                                                <textarea class="form-control"
-                                                          name="details" rows="4">{% if profile.details %}
-                                                    {{ profile.details }}{% endif %}</textarea>
+                                        <label>Write a comment</label>
+                                        <textarea class="form-control"></textarea>
                                     </fieldset>
                                     <a class="btn btn-primary">Post</a>
                                 </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="text-center btn-list-more"><a>Show More</a></div>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div role="tabpanel" class="tab-pane fade" id="members">
-                    Members list here
+                    <div class="row">
+                        <div class="col-sm-12 col-md-3">
+                            <table id="members-filter" class="table-user-contributions table table-hover">
+                                <tbody>
+                                    <tr class="active" data-filter-by="members">
+                                        <td><span>Members</span></td>
+                                        <td><span class="badge">3</span></td>
+                                    </tr>
+                                     <tr data-filter-by="owners">
+                                        <td><span>Owners</span></td>
+                                        <td><span class="badge">2</span></td>
+                                    </tr>
+                                    <tr data-filter-by="pending">
+                                        <td><span>Pending</span></td>
+                                        <td><span class="badge">2</span></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="col-sm-12 col-md-9">
+                            <table data-filter-by="members" class="table-members-list active">
+                                <tr>
+                                    <td>
+                                        <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
+                                             class="profile-pic-thumbnail round-image pull-left">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <h4><strong><a href="#">Maurier Ramirez</a></strong></h4>
+                                        <span class="text-muted">Front End Web Developer at Utah State University</span>
+                                    </td>
+                                    <td>Owner</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
+                                             class="profile-pic-thumbnail round-image pull-left">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <h4><strong><a href="#">Maurier Ramirez</a></strong></h4>
+                                        <span class="text-muted">Front End Web Developer at Utah State University</span>
+                                    </td>
+                                    <td>Creator</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
+                                             class="profile-pic-thumbnail round-image pull-left">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <h4><strong><a href="#">Maurier Ramirez</a></strong></h4>
+                                        <span class="text-muted">Front End Web Developer at Utah State University</span>
+                                    </td>
+                                    <td>Member</td>
+                                </tr>
+                            </table>
+
+                            {#  Owners and Creators #}
+                            <table data-filter-by="owners" class="table-members-list">
+                                <tr>
+                                    <td>
+                                        <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
+                                             class="profile-pic-thumbnail round-image pull-left">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <h4><strong><a href="#">Maurier Ramirez</a></strong></h4>
+                                        <span class="text-muted">Front End Web Developer at Utah State University</span>
+                                    </td>
+                                    <td>Creator</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
+                                             class="profile-pic-thumbnail round-image pull-left">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <h4><strong><a href="#">Maurier Ramirez</a></strong></h4>
+                                        <span class="text-muted">Front End Web Developer at Utah State University</span>
+                                    </td>
+                                    <td>Owner</td>
+                                </tr>
+                            </table>
+
+                            {#  Pending invitation requests #}
+                            <table data-filter-by="pending" class="table-members-list">
+                                <tr>
+                                    <td>
+                                        <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
+                                             class="profile-pic-thumbnail round-image pull-left">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <h4><strong><a href="#">Maurier Ramirez</a></strong></h4>
+                                        <span class="text-muted">Front End Web Developer at Utah State University</span>
+                                    </td>
+                                    <td><a href="#" class="btn btn-default"><span class="glyphicon glyphicon-ok"></span>&nbsp;Accept</a></td>
+                                    <td><a href="#" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span>&nbsp;Reject</a></td>
+                                </tr>
+
+                                <tr>
+                                    <td>
+                                        <div style="background-image: url('{{ request.user.userprofile.picture.url }}');"
+                                             class="profile-pic-thumbnail round-image pull-left">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <h4><strong><a href="#">Maurier Ramirez</a></strong></h4>
+                                        <span class="text-muted">Front End Web Developer at Utah State University</span>
+                                    </td>
+                                    <td><a href="#" class="btn btn-default"><span class="glyphicon glyphicon-ok"></span>&nbsp;Accept</a></td>
+                                    <td><a href="#" class="btn btn-default"><span class="glyphicon glyphicon-remove"></span>&nbsp;Reject</a></td>
+                                </tr>
+                            </table>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -213,7 +332,6 @@
                 $(this).find(".member-label").text("Member");
             });
 
-
             // Abstract collapse toggle
             $(".show-more-btn").click(function () {
                 if ($(this).parent().find(".activity-description").css("max-height") == "50px") {
@@ -232,6 +350,18 @@
                     $(this).attr("title", "Show more");
                     $(this).text("···");
                 }
+            });
+
+            // Filter
+            $("#members").find(".table-members-list").hide();
+            $("#members").find(".table-members-list.active").show();
+
+            $("#members-filter tr").click(function() {
+                $("#members").find(".table-members-list").removeClass("active").hide();
+                var dataFilter = $(this).attr("data-filter-by");
+                $("#members").find(".table-members-list[data-filter-by='" + dataFilter + "']").addClass("active").fadeIn();
+                $(this).parent().find("tr").removeClass("active");
+                $(this).addClass("active");
             });
         });
     </script>
