--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -151,10 +151,9 @@
 
 {% block extra_js %}
 
-    <!--<script async defer src="https://maps.googleapis.com/maps/api/js?libraries=drawing"></script>-->
-    <script src="https://maps.googleapis.com/maps/api/js?v=3" type="text/javascript"></script>
-    <script src="https://google-maps-utility-library-v3.googlecode.com/svn/tags/keydragzoom/2.0.8/src/keydragzoom_packed.js" type="text/javascript"></script>
-    <script src="https://googlemaps.github.io/js-marker-clusterer/src/markerclusterer.js" type="text/javascript"></script>
+    <script src="//maps.googleapis.com/maps/api/js?v=3" type="text/javascript"></script>
+    <script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/keydragzoom/2.0.8/src/keydragzoom_packed.js" type="text/javascript"></script>
+    <script src="//googlemaps.github.io/js-marker-clusterer/src/markerclusterer.js" type="text/javascript"></script>
     <script type="text/javascript">
         var minFloatingNumber = 0.0001;
         var map = null;
